<resources>
    <string name="app_name">Touch Kill - Zombie</string>
    <string name="btn_login">Inicia sesión</string>
    <string name="btn_singin">Regístrate</string>
    <string name="img_desccription">Imágen con el título descriptivo del juego.</string>
    <string name="name">Nombre</string>
    <string name="country">País</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="date">Fecha</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_logarte">Ingresar</string>
    <string name="btn_singout">Cerrar sesión</string>
    <!--MENU-->
    <string name="action_settings">Editar</string>

    <!--ActivityMenu-->
    <string name="point_record">Mi puntuación</string>
    <string name="zombies">---</string>
    <string name="main">Menú</string>
    <string name="uid">--</string>
    <string name="emailUser">--</string>
    <string name="nameUser">--</string>
    <string name="btnPlay">Jugar</string>
    <string name="btn_info">Acerca de</string>
    <string name="btn_recordall">Puntuaciones</string>
    <!--ALERT-->
    <string name="tittle_alert">Cerrar sessión</string>
    <string name="descript_alert">¿Deseas cerrar sessión?</string>
    <string name="confirm_alert">Aceptar</string>
    <string name="cancel_alert">Cancelar</string>
    <!--Game-->
    <string name="points">0</string>
    <string name="name_user">--</string>
    <string name="time_game">0 S</string>
    <!--GameOver-->
    <string name="lose_game">!Perdistes¡</string>
    <string name="end_time">!Se acabó el tiempo¡</string>
    <string name="kill_zombies">--</string>
    <string name="text_kilzombies">Has Matado</string>
    <string name="go_menu">IR AL MENÚ</string>
    <string name="game_again">VOLVER aJUGAR</string>
    <string name="show_score">VER PUNTUACIONES</string>

    <string name="player_name">Nombre: </string>
    <string name="player_country">País: </string>
    <string name="player_date">Fecha de inicio: </string>
    <string name="player_score">Puntaje: </string>

    <string name="current_password">Contraseña Actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="changue_password">Cambiar Contraseña</string>
    <string name="btn_acept">Aceptar</string>

    <!--About-->
    <string name="deveveloped">Desarrolado por:  </string>
    <string name="dev">Darren Michael (MDMGN)</string>
    <string name="ok">OK</string>
    <!--Select Dificult-->
    <string name="hard">Difícil</string>
    <string name="normal">Normal</string>
    <string name="easy">Facíl</string>
    <!--Screen Lpad-->
    <string name="loading">Cargando...</string>
</resources>