<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/black">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_record"
            android:textColor="@color/red"
            android:textSize="30sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zombies"
            android:id="@+id/recorUser"
            android:textColor="@color/red"
            android:textSize="20sp"></TextView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/handz"
            android:contentDescription="@string/img_desccription"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uidUser"
            android:text="@string/uid"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:gravity="center"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameUser"
            android:id="@+id/nameUser"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:gravity="center"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailUser"
            android:id="@+id/emailUser"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:gravity="center"></TextView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnPlay"
            android:id="@+id/btnPlay"
            android:backgroundTint="@color/zombie"
            android:textColor="@color/red"
            tools:targetApi="lollipop"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_recordall"
            android:id="@+id/btnRecordall"
            android:backgroundTint="@color/zombie"
            android:textColor="@color/red"
            tools:targetApi="lollipop"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_info"
            android:id="@+id/btnInfo"
            android:backgroundTint="@color/zombie"
            android:textColor="@color/red"
            tools:targetApi="lollipop"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_singout"
            android:id="@+id/btnSingOut"
            android:backgroundTint="@color/zombie"
            android:textColor="@color/red"
            tools:targetApi="lollipop"></Button>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>