<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameOverActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/black"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameUser"
            android:id="@+id/tVplayerUsername"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:id="@+id/endGameText"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="25sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_kilzombies"
            android:id="@+id/killZombiesText"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="25sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kill_zombies"
            android:id="@+id/killZombies"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp"></TextView>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="game_over.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_again"
            android:textSize="20sp"
            android:id="@+id/playAgain"
            android:backgroundTint="@color/zombie"
            app:cornerRadius="30dp"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/red"
            tools:targetApi="lollipop"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_score"
            android:textSize="20sp"
            android:id="@+id/showScore"
            android:backgroundTint="@color/zombie"
            app:cornerRadius="30dp"
            android:padding="12dp"
            android:textColor="@color/red"
            tools:targetApi="lollipop"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_menu"
            android:textSize="20sp"
            android:id="@+id/goMenu"
            android:backgroundTint="@color/zombie"
            app:cornerRadius="30dp"
            android:padding="12dp"
            android:textColor="@color/red"
            tools:targetApi="lollipop"></Button>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>