<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="320dp"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/black">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hard"
        android:textSize="25sp"
        android:id="@+id/btnHard"
        android:backgroundTint="@color/zombie"
        app:cornerRadius="30dp"
        android:padding="12dp"
        android:textColor="@color/red"
        tools:targetApi="lollipop"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/normal"
        android:textSize="25sp"
        android:id="@+id/btnNormal"
        android:backgroundTint="@color/zombie"
        app:cornerRadius="30dp"
        android:padding="12dp"
        android:textColor="@color/red"
        tools:targetApi="lollipop"></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/easy"
        android:textSize="25sp"
        android:id="@+id/btnEasy"
        android:backgroundTint="@color/zombie"
        app:cornerRadius="30dp"
        android:padding="12dp"
        android:textColor="@color/red"
        tools:targetApi="lollipop"></Button>
</androidx.appcompat.widget.LinearLayoutCompat>