<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChanguePasswordActivity"
    android:background="@color/black"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleChanguePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/changue_password"
            android:textColor="@color/red"
            android:textSize="25sp"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/zombie"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/eTCurrentpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/current_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/zombie"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/eTNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/red"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="40dp"
             android:backgroundTint="@color/zombie"
             android:padding="12dp"
             android:text="@string/cancel_alert"
             android:textColor="@color/red"
             android:textSize="17sp"
             app:cornerRadius="30dp"
             tools:targetApi="lollipop"></Button>

         <Button
             android:id="@+id/btnAcept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="40dp"
             android:backgroundTint="@color/zombie"
             android:padding="12dp"
             android:text="@string/btn_acept"
             android:textColor="@color/red"
             android:textSize="17sp"
             app:cornerRadius="30dp"
             tools:targetApi="lollipop"></Button>
     </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>