<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="400dp"
        android:layout_height="320dp"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/developedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/deveveloped"
            android:textColor="@color/red"
            android:textSize="25sp"></TextView>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/mdmgn"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"></ImageView>

        <TextView
            android:id="@+id/devText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/dev"
            android:textColor="@color/red"
            android:textSize="20sp"></TextView>
        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/zombie"
            android:padding="12dp"
            android:text="@string/ok"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            app:cornerRadius="30dp"
            android:layout_gravity="center"
            tools:targetApi="lollipop"></Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>