<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/zombie"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:elevation="2dp"
    app:contentPadding="5dp">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/rifle"></ImageView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:textSize="18sp"
            android:textColor="@color/red"></TextView>
        <TextView
            android:id="@+id/playerCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_country"
            android:textSize="18sp"
            android:textColor="@color/red"></TextView>
        <TextView
            android:id="@+id/playerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_date"
            android:textSize="18sp"
            android:textColor="@color/red"></TextView>
        <TextView
            android:id="@+id/playerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:textSize="18sp"
            android:textColor="@color/red"></TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>