<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".GameActivity">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heightscreen"
                android:text="--"
                android:textSize="15sp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--"
                android:id="@+id/widthscreen"
                android:textSize="15sp"></TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <ImageView
            android:id="@+id/iVaplastados"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/aplastados"></ImageView>
        <TextView
            android:text="@string/points"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/tVpoint"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"></TextView>
        <TextView
            android:text="@string/nameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVname"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/red"></TextView>
        <!--TIME ANIMATION-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="time_animation.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_marginLeft="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_game"
            android:id="@+id/tVtime"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"></TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/pj"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/pjzombie"></ImageView>
        <ImageView
            android:id="@+id/pjhuman"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/pjhuman_kill"
            android:visibility="invisible"></ImageView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>